--- a/agenda/templates/model-header.html
+++ b/agenda/templates/model-header.html
@@ -1,4 +1,11 @@
+{% load static %}
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="{% static 'css/telaLogin/estilos/logout.css' %}">
+<div class="logout">
+    <a href="/logout">logout</a>
+</div>
+
 <title>Agenda</title>
+<h1>Agenda</h1>
