--- a/agenda/templates/model-header.html
+++ b/agenda/templates/model-header.html
@@ -2,9 +2,9 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="{% static 'css/telaLogin/estilos/logout.css' %}">
-<div class="logout">
-    <a href="/logout">logout</a>
+<link rel="stylesheet" href="{% static 'css/telaLogin/estilos/button.css' %}">
+<div class="button">
+    <button type="button"><a href="/logout">logout</a></button>
 </div>
 
 <title>Agenda</title>
