--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -3,9 +3,17 @@
     {% block content %}
         <h2>Agendamentos:</h2>
 
+        <div class="button-evento">
+            <button><a href="evento/">Novo Evento</a></button>
+        </div>
+
         <ul style="font-size: 18px;">
             {% for evento in eventos %}   
-                <li>{{ evento.titulo }} - {{ evento.get_data_evento }}</li>
+                <li>
+                    {{ evento.titulo }} - {{ evento.get_data_evento }} 
+                    <br> {{ evento.descricao }} <br>
+                    <a href="evento/?id={{ evento.id }}" class="link">Editar</a>  <a href="evento/delete/{{ evento.id }}/" class="link">Excluir</a>
+                </li><br>
             {% endfor %}
         </ul>
     {% endblock %}
