--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -10,9 +10,11 @@
         <ul style="font-size: 18px;">
             {% for evento in eventos %}   
                 <li>
-                    {{ evento.titulo }} - {{ evento.get_data_evento }} 
-                    <br> {{ evento.descricao }} <br>
-                    <a href="evento/?id={{ evento.id }}" class="link">Editar</a>  <a href="evento/delete/{{ evento.id }}/" class="link">Excluir</a>
+                    <div {% if get_evento_atrasado %} style='color: red;' {% endif %}>
+                        {{ evento.titulo }} - {{ evento.get_data_evento }} 
+                        <br> {{ evento.descricao }} <br>
+                        <a href="evento/?id={{ evento.id }}" class="link">Editar</a>  <a href="evento/delete/{{ evento.id }}/" class="link">Excluir</a>
+                    </div>
                 </li><br>
             {% endfor %}
         </ul>
